--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,5 @@
 <div id="home-content">
+    <h1 id="hero-title">Welcome to the Island of Taniti</h1>
     <img
         id="hero-image"
         src="assets/gallery/hero.jpg"
