--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -5,6 +5,15 @@
     align-items: center;
 }
 
+#hero-title {
+    font-family: "Poiret One", sans-serif;
+    font-size: 3rem;
+    color: #1e3a8a;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-weight: 600;
+}
+
 #hero-image {
     margin-bottom: 0;
     width: 70%;
@@ -58,15 +67,15 @@
     overflow: hidden;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
     flex-shrink: 0;
-}
 
-.photo-card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
 
-.photo-card img:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease;
+        &:hover {
+            transform: scale(1.05);
+            transition: transform 0.3s ease;
+        }
+    }
 }
