--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -68,7 +68,7 @@
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
     flex-shrink: 0;
 
-    & img {
+    img {
         width: 100%;
         height: 100%;
         object-fit: cover;
