--- a/src/app/experiences/experiences.scss
+++ b/src/app/experiences/experiences.scss
@@ -5,14 +5,15 @@ $medium-gray: #6c757d;
 $dark-gray: #343a40;
 
 #experiences-content {
-    margin-top: 70px;
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 2rem;
     text-align: center;
 
     h1 {
         font-family: "Poiret One", sans-serif;
         font-size: 2.5rem;
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
         color: $title-font-color;
         font-weight: 600;
     }
@@ -68,7 +69,6 @@ $dark-gray: #343a40;
             font-size: 1.25rem;
             font-weight: 400;
             line-height: 1.6;
-            margin: 0;
             max-width: 600px;
             margin: 0 auto;
         }
@@ -91,6 +91,9 @@ $dark-gray: #343a40;
         display: flex;
         align-items: center;
         justify-content: center;
+        line-height: 1;
+        text-align: center;
+        vertical-align: middle;
 
         &:hover {
             background: rgba(255, 255, 255, 1);
@@ -148,9 +151,10 @@ $dark-gray: #343a40;
         }
 
         p {
-            font-size: 1rem;
+            font-family: "Poiret One", sans-serif;
+            font-size: 1.2rem;
             line-height: 1.5;
-            color: $medium-gray;
+            color: black;
             margin: 0;
             font-weight: 300;
         }
@@ -175,7 +179,7 @@ $dark-gray: #343a40;
         }
 
         p {
-            font-size: 1.15rem;
+            font-size: 1.4rem;
             line-height: 1.6;
             font-family: "Poiret One", sans-serif;
             color: black;
