Fix logo image 404 error. Add Home button in site-header

--- a/src/app/site-header/site-header.html
+++ b/src/app/site-header/site-header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <div class="header-content">
         <div class="logo-container">
-            <a href="/">
+            <a routerLink="/">
                 <img
                     id="logo"
                     src="assets/gallery/logo.png"
@@ -11,6 +11,9 @@
         </div>
         <nav>
             <ul id="navBar">
+                <li>
+                    <a routerLink="/">Home</a>
+                </li>
                 <li>
                     <a routerLink="/experiences">Experiences</a>
                 </li>
