--- a/src/app/food-and-drinks/food-and-drinks.html
+++ b/src/app/food-and-drinks/food-and-drinks.html
@@ -3,7 +3,7 @@
         <h1>Food & Drinks</h1>
         <p>
             Discover the flavors of Taniti, from local cuisine to international
-            dining
+            dining.
         </p>
     </div>
 
