--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,33 @@ body {
     padding: 0 300px 0 300px;
     margin: 0;
     overflow-x: hidden;
+
+    // Add responsive padding that scales down
+    @media (max-width: 1400px) {
+        padding: 0 200px 0 200px;
+    }
+
+    @media (max-width: 1200px) {
+        padding: 0 150px 0 150px;
+    }
+
+    @media (max-width: 1024px) {
+        padding: 0 100px 0 100px;
+    }
+
+    @media (max-width: 768px) {
+        padding: 0 60px 0 60px;
+    }
+
+    @media (max-width: 600px) {
+        padding: 0 30px 0 30px;
+    }
+
+    @media (max-width: 480px) {
+        padding: 0 20px 0 20px;
+    }
+
+    @media (max-width: 360px) {
+        padding: 0 15px 0 15px;
+    }
 }
